--- a/src/style.scss
+++ b/src/style.scss
@@ -116,12 +116,90 @@ button {
 .header {
   padding: 1rem;
   justify-content: space-between;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  
+  @include md {
+    justify-content: start;
+    padding: 2rem 2.5rem;
+  }
 
   .navigation {
     display: none;
 
+    @include md {
+      display: flex;
+      align-items: center;
+      flex: 1;
+      margin-left: 4rem;
+      font-size: 0.875rem;
+      line-height: 1rem;
+    }
+
+    a, button {
+      color: var(--clr-medium-gray);
+    }
+
+    > ul {
+      gap: 2.5rem;
+
+      li {
+        position: relative;
+      }
+    }
+
+    .expand-btn {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      img:nth-child(2) {
+        display: none;
+      }
+
+      &.open {
+        img:first-child {
+          display: none;
+        }
+
+        img:nth-child(2) {
+          display: revert;
+        }
+      }
+    }
+
+    .submenu {
+      display: none;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      transform: translateY(calc(100% + 1.25rem));
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
+      width: max-content;
+    }
+
+    .expand-btn.open + .submenu {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      li a {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
+    }
+
     .auth-links {
       margin-left: auto;
+
+      a:nth-child(2) {
+        margin-left: 2.5rem;
+      }
     }
   }
 
@@ -129,6 +207,10 @@ button {
     width: 40px;
     aspect-ratio: 1/1;
     line-height: 0;
+
+    @include md {
+      display: none;
+    }
   }
 
   .mobile-menu {
@@ -235,22 +317,53 @@ button {
   flex-direction: column;
   padding-top: 0.5rem;
 
+  @include md {
+    flex-direction: row;
+    gap: 125px;
+    padding-left: 165px;
+    padding-right: 130px;
+    padding-top: 130px;
+  }
+
+  &__img {
+    @include md {
+      flex: 1 0 30rem;
+    }
+  }
+
   &__inner {
     order: 2;
     margin-top: 3rem;
     text-align: center;
     padding-inline: 1rem;
+
+    @include md {
+      order: initial;
+      text-align: left;
+      padding: 0;
+    }
   }
 
   &__title {
     font-size: 2.25rem;
     font-weight: 700;
     margin-bottom: 1rem;
+
+    @include md {
+      font-size: 5rem;
+      line-height: 1;
+      margin-bottom: 3rem;
+    }
   }
 
   &__lead {
     color: var(--clr-medium-gray);
     margin-bottom: 1.5rem;
+
+    @include md {
+      margin-bottom: 3.25rem;
+      max-width: 445px;
+    }
   }
 
   &__cta {
@@ -259,6 +372,11 @@ button {
     &:where(:hover, :focus) {
       background-color: transparent;
       border: 2px solid;
+    }
+
+    @include md {
+      padding: 0.875rem 1.875rem;
+      margin-bottom: 6.75rem;
     }
   }
 
