--- a/src/style.scss
+++ b/src/style.scss
@@ -71,6 +71,7 @@ body {
   font-weight: 500;
   line-height: 1.55;
   overflow-x: hidden;
+  background-color: var(--clr-almost-white);
 
   @include md {
     font-size: 1.125rem;
