--- a/src/style.scss
+++ b/src/style.scss
@@ -342,7 +342,7 @@ button {
       order: initial;
       text-align: left;
       padding: 0;
-      padding-top: 6.5rem;
+      margin-top: 6.5rem;
     }
   }
 
